// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialLinks should NavSocialLinks render 1 item without crash 1`] = `
<DocumentFragment>
  <ul
    class="social"
    title="social-links"
  >
    <li>
      <a
        href="url"
      >
        <i
          class="icon"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SocialLinks should NavSocialLinks render 2 item without crash 1`] = `
<DocumentFragment>
  <ul
    class="social"
    title="social-links"
  >
    <li>
      <a
        href="url"
      >
        <i
          class="icon"
        />
      </a>
    </li>
    <li>
      <a
        href="url2"
      >
        <i
          class="icon2"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SocialLinks should NavSocialLinks render no item without crash 1`] = `
<DocumentFragment>
  <ul
    class="social"
    title="social-links"
  />
</DocumentFragment>
`;
